# GANSU_SYCL

./: .gitignore  CMakeLists.txt  CMakeLists_sycl.txt  LICENSE  Parameter.md  README.md  README_org.md
basis/: 3-21g.sad  4-31g.gbs  4-31g.sad  6-311g_st_st.gbs  6-311g_st_st.sad  6-31g.gbs  6-31g.sad  6-31g_st.gbs  6-31g_st.sad  cc-pv5z.gbs  cc-pv6z.gbs  cc-pvdz.gbs  cc-pvdz.sad  cc-pvqz.gbs  cc-pvqz.sad  cc-pvtz.gbs  cc-pvtz.sad  sto-3g.sad  sto-6g.sad
doc/: Doxyfile  Parameter.md  main.md  reference.bib
include/: Et_functions.hpp  basis_set.hpp  boys.hpp  builder.hpp  compile_flag.hpp  console.hpp  device_host_memory.hpp  env.hpp  eri.hpp  gpu_kernels.hpp  gpu_manager.hpp  hf.hpp  int1e.hpp  int2c2e.hpp  int2e.hpp  int3c2e.hpp  molecular.hpp  optimizer.hpp  parameter_manager.hpp  parameters.h  parseXYZ.hpp  profiler.hpp  rhf.hpp  rohf.hpp  types.hpp  uhf.hpp  utils.hpp  utils_cuda.hpp
include_sycl/: Et_functions.hpp  boys.hpp  builder.hpp  device_host_memory.hpp  env.hpp  eri.hpp  gpu_kernels.hpp  gpu_manager.hpp  hf.hpp  int1e.hpp  int2c2e.hpp  int2e.hpp  int3c2e.hpp  md_kernel.txt  parameter_manager.hpp  parameters.h  profiler.hpp  rhf.hpp  rohf.hpp  uhf.hpp  utils.hpp  utils_cuda.hpp
include_sycl/integral_RI/int2c2e/: orig_dd.txt  orig_gg.txt  orig_pd.txt  orig_pg.txt  orig_pp.txt  orig_sf.txt
include_sycl/integral_RI/int3c2e/: orig_pdp.txt  orig_sdg.txt  orig_sps.txt  orig_ssd.txt  orig_ssf.txt  orig_ssg.txt  orig_ssp.txt
parameter_recipe/: RHF_DIIS.txt  RHF_Damping.txt  RHF_OptimalDamping.txt  RHF_eval.txt  ROHF_DIIS.txt  ROHF_Damping.txt  ROHF_OptimalDamping.txt  UHF_DIIS.txt  UHF_Damping.txt
script/: generate_sad_cache.py
src/: GeometryOptimization.cu  HF_main.cu  MD_OandK_kernel.txt  MD_V_kernel.txt  MD_kernel.txt  OS_OandK_kernel.txt  OS_V_kernel.txt  OS_kernel.txt  basis_set.cpp  demo.cu  eri.cu  gpu_kernels.cu  gpu_manager.cu  hf.cu  int1e.cu  int2c2e.cu  int2e.cu  int3c2e.cu  parameter_manager.cpp  parseXYZ.cpp  profiler.cu  rhf.cu  rohf.cu  schwarz.txt  uhf.cu
src/boys/: boys_30720.h
src/integral_RI/int2c2e/: orig_dd.txt  orig_df.txt  orig_dg.txt  orig_ff.txt  orig_fg.txt  orig_gg.txt  orig_pd.txt  orig_pf.txt  orig_pg.txt  orig_sd.txt  orig_sf.txt  orig_sg.txt  orig_ss.txt
src/integral_RI/int3c2e/: orig_ddd.txt  orig_ddp.txt  orig_dds.txt  orig_pdd.txt  orig_pdf.txt  orig_pdp.txt  orig_pds.txt  orig_ppd.txt  orig_ppf.txt  orig_ppg.txt  orig_ppp.txt  orig_pps.txt  orig_sdd.txt  orig_sdf.txt  orig_sdg.txt  orig_sdp.txt  orig_sds.txt  orig_spd.txt  orig_spf.txt  orig_spg.txt  orig_spp.txt  orig_ssd.txt  orig_ssf.txt  orig_ssg.txt  orig_sss.txt
src_sycl/: HF_main.dp.cpp  MD_kernel.txt  basis_set.cpp  eri.dp.cpp  gpu_kernels.dp.cpp  gpu_manager.dp.cpp  hf.dp.cpp  int1e.dp.cpp  int2c2e.dp.cpp  int2e.dp.cpp  int3c2e.dp.cpp  parameter_manager.cpp  parseXYZ.cpp  profiler.dp.cpp  rhf.dp.cpp  rohf.dp.cpp  schwarz.txt  uhf.dp.cpp  utils.cpp
src_sycl/boys/: boys_30720.h
src_sycl/integral_RI/int2c2e/: orig_pf.txt  orig_sp.txt
src_sycl/integral_RI/int3c2e/: orig_ddd.txt  orig_ddp.txt  orig_dds.txt  orig_pdd.txt  orig_ppf.txt  orig_sdf.txt  orig_spd.txt  orig_spg.txt
test/: CMakeLists.txt  test_gpu_kernels.cu  test_gpu_manager.cu  test_util.hpp
test_sycl/: CMakeLists.txt  dpct.cmake  test_gpu_kernels.dp.cpp  test_gpu_manager.dp.cpp  test_util.hpp
xyz/: ABAQ.xyz  Acetaldehyde.xyz  Acetone.xyz  Anthracene.xyz  Arsenic_trioxide.xyz  Azobenzene.xyz  Benzene.xyz  Bromoform.xyz  Butane.xyz  C2H4.xyz  CH4.xyz  CO2.xyz  Ca3P2.xyz  CaCO3.xyz  CuO.xyz  Cyclomethicone5.xyz  Decane.xyz  Ethanol.xyz  Formaldehyde.xyz  H2.xyz  H2O.xyz  H2S.xyz  H2SO4.xyz  H2Se.xyz  H2SeO4.xyz  HBr.xyz  HCl.xyz  HF.xyz  HeH.xyz  Hexachlorobenzene.xyz  Inositol.xyz  Isobutane.xyz  Lysergide.xyz  Methanol.xyz  Methyl_iodide.xyz  Molybdenum_hexafluoride.xyz  N2.xyz  NH3.xyz  NHO3.xyz  NaCl.xyz  (+14 more)
xyz/large_molecular/: Acetyl_CoA.xyz  Adonitoxin.xyz  AminoAcids.xyz  Argipressin.xyz  Beta-Carotene.xyz  C14H23NNa2O17S2.xyz  C17H31O6N5S.xyz  C26H21N5Na4O19S6.xyz  C32H12BF24Na.xyz  C33H56N7O17P3S.xyz  C57H104N2O21.xyz  C58H80Cl2N2O14.xyz  C72H104Na8O48S8.xyz  Cholesterol.xyz  CoenzymeQ10.xyz  Cyclooctaamylose.xyz  DHA.xyz  Decacene.xyz  Dicoronylene.xyz  Digitonin.xyz  Dioxin.xyz  Dodecacene.xyz  Dodecahedrane.xyz  Doxorubicin.xyz  Eledoisin.xyz  FolicAcid.xyz  Ganglioside_GM3.xyz  Glycogen.xyz  Kekulene.xyz  Merocyanine_dye.xyz  Methyl-cyclodextrin.xyz  Morphine.xyz  NeuromedinB.xyz  Oxytocin.xyz  Penicillin.xyz  Phthalocyanine.xyz  Reichardt_dye.xyz  Sirolimus.xyz  Taxol.xyz  Tetrakis.xyz  (+6 more)
xyz/monatomic/: Al.xyz  Ar.xyz  As.xyz  B.xyz  Be.xyz  Br.xyz  C.xyz  Ca.xyz  Cl.xyz  Co.xyz  Cr.xyz  Cu.xyz  F.xyz  Fe.xyz  Ga.xyz  Ge.xyz  H.xyz  He.xyz  K.xyz  Kr.xyz  Li.xyz  Mg.xyz  Mn.xyz  N.xyz  Na.xyz  Ne.xyz  Ni.xyz  O.xyz  P.xyz  Rb.xyz  S.xyz  Sc.xyz  Se.xyz  Si.xyz  Sr.xyz  Ti.xyz  V.xyz  Y.xyz  Zn.xyz
